# bill-parser

./: ProjectHome.md  README  copy.csh  parameter.pl  read_cfg_attr.pl  setup.sh
doc/: collect第一次测试.xls  iGWB 第一份最终话单文件格式说明书.doc  pretreat主控程序跟各模块之间的调用规范.txt  全省MSC网元话单采集.xls  浙江移动综合分析_P_物理设计说明书_原始话单_V1.1.doc  浙江移动话单解析Nokia.xls  浙江移动话单解析程序概要设计说明书.doc
release/: stop_all
release/cleaner/: Readme_cleaner.txt  start_clean_data_pretreat
release/collect/: Readme_collect.txt  start_collect
release/collect_except/: stop_collect_except
release/controller/: Readme_controller.txt  start_bill_parser_controller  start_controller
release/insert/: Readme_insert.txt  start_insert
release/log_parser/: Readme_log_parser.txt
release/pretreat/: start_pretreat  stop_pretreat
release/recollector/: Readme_recollector.txt  start_recollect  start_recollector  stop_recollector
src/: build_all  clean_all
src/collect/: Ftp.h  collect.c
src/collect_except/: collect_except.pl
src/controller/: clean.sh  controller.pl
src/huawei_a1/: CMakeLists.txt
src/huawei_a1/src/: CMakeLists.txt  asn1_bill.cpp  format.cpp  module_base.cpp  module_base.hpp  module_base.inl  tlog.hpp
src/insert/: insert.c
src/log_parser/: clean.sh
src/nokia/: Makefile  nokia.c
src/pretreat/: pretreat.c
src/recollector/: Makefile  collect.c  collect.h  common.c  common.h  hashtable.c  hashtable.h  main.c  pretreat.c  pretreat.h
trunk/: setup.cfg
trunk/doc/: 04-MSOFTX3000 V100R007C03 Binary话单格式(国内).doc  NOKIA话单格式.doc  Y00AN1MX.IMG  (+5 more)
trunk/src/recollector/huawei_a1/src/: CMakeLists.txt  value.hpp
(+197 files in other folders)
